# bearing-dataset-ml-modelling

./: model_developement_ver_1_only_auto.ipynb  pyproject.toml
feature_extraction/: bearing_properties_calculations.py  feature_extraction.py  order_domain_feats_extr.py  time_domain_feats_extr.py
