[tool.poetry]
name = "bearing_rul_pred_final"
version = "0.1.0"
description = "Environment for bearings Remaining Useful Life prediction based on NASA bearing dataset"
authors = ["Sławomir Raczyński <sl.raczynski@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
scikit-learn = "^1.1.2"
TPOT = "^0.11.7"
pandas = "^1.4.3"
numpy = "^1.23.2"
scipy = ">=1.7.0, <1.9.0"
plotly = "^5.10.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
